@@ -537,6 +537,8 @@ save_image (const gchar *filename,
   temp = g_new (guchar, cinfo.image_width * cinfo.input_components);
   data = g_new (guchar, rowstride * gimp_tile_height ());
 
+  gimp_tile_cache_ntiles (1 + cinfo.image_width / gimp_tile_width ());
+
   /* fault if cinfo.next_scanline isn't initially a multiple of
    * gimp_tile_height */
   src = NULL;
@@ -604,7 +606,7 @@ save_image (const gchar *filename,
       src += rowstride;
       jpeg_write_scanlines (&cinfo, (JSAMPARRAY) &temp, 1);
 
-      if ((cinfo.next_scanline % 5) == 0)
+      if ((cinfo.next_scanline % 16) == 0)
         gimp_progress_update ((gdouble) cinfo.next_scanline /
                               (gdouble) cinfo.image_height);
     }
